--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+CMakeUserPresets.json
+
+# External projects
+*-prefix/
+
 Debug/*
-build/*
+build/
+CubeMX/*
+!CubeMX/*.ioc
+docs/*
+docs/
