--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "stm32-for-vscode.openOCDPath": "openocd",
-    "stm32-for-vscode.makePath": "make",
-    "stm32-for-vscode.armToolchainPath": "",
-    "cortex-debug.armToolchainPath": "",
-    "C_Cpp.dimInactiveRegions": false
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
