--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,12 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
+	// Privileged container in order to access /dev
 	"privileged": true,
+	// Mount USB devices (debug probes, UART interfaces, ...)
+	"mounts": [
+		"source=/dev/bus/usb/,target=/dev/bus/usb/,type=bind"
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": [
