--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,13 @@
 cmake_minimum_required(VERSION 3.22)
 
+# Project Name    --- MUST EDIT ---
+project(solderiron)
+enable_language(C CXX ASM)
+
+# Define the options to select build target
+option(BUILD_SIMULATOR "Build the LVGL GUI simulator for PC" OFF)
+
+
 # Setup cmake module path and compiler settings
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 message("Build type: "              ${CMAKE_BUILD_TYPE})
@@ -11,78 +19,97 @@ set(CMAKE_CXX_STANDARD_REQUIRED     ON)
 set(CMAKE_CXX_EXTENSIONS            ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS	ON)
 set(PROJ_PATH                       ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_TOOLCHAIN_FILE			gcc-arm-none-eabi)
 
-# Project Name    --- MUST EDIT ---
-project(solderiron-fw)
-enable_language(C CXX ASM)
+# Compiler settings based on the target
+if(BUILD_SIMULATOR)
+	message(STATUS "Configuring build for simulator")	
+	set(TARGET_NAME simulator)
+	add_definitions(-DSIMULATOR)
+	set(CMAKE_C_COMPILER            gcc)
+	set(CMAKE_CXX_COMPILER          g++)
+else()
+	message(STATUS "Configuring build for firmware")
+	set(TARGET_NAME firmware)
+	add_definitions(-DFIRMWARE)
+	set(CMAKE_TOOLCHAIN_FILE		gcc-arm-none-eabi)
+endif()
 
-# Linker File     --- MUST EDIT ---
-set(MCU_LINKER_SCRIPT       ${PROJ_PATH}/STM32F767VITX_FLASH.ld)
-
-set(EXECUTABLE                      ${CMAKE_PROJECT_NAME})
-
-# MCU Parameters (FPU, HAL, etc.)
-include(STM32F767xx_HAL_PARA)
 
 # Include List, Source List, and MCU Sepecific Setting
 # Must Update these files in cmake/ when adding new source files
 include(SourceList)
 include(IncludeList)
 
-# Executable files
-add_executable(${EXECUTABLE} ${source_list})
+if(BUILD_SIMULATOR)
+	set(EXECUTABLE		${CMAKE_PROJECT_NAME}-simulator)
+	add_executable(${EXECUTABLE} ${SIMULATOR_SOURCES})
+	target_include_directories(${EXECUTABLE} PRIVATE ${INCLUDE_DIRS_SIMULATOR})
 
-# Include paths
-target_include_directories(${EXECUTABLE} PRIVATE ${include_list})
+	target_compile_options(${EXECUTABLE} PRIVATE -Wall -Wextra -Wshadow -Wundef -Wmaybe-uninitialized -Wmissing-prototypes -Wno-discarded-qualifiers 
+	-Wno-unused-function -Wno-error=strict-prototypes -Wpointer-arith -fno-strict-aliasing -Wno-error=cpp -Wuninitialized 
+	-Wno-unused-parameter -Wno-missing-field-initializers -Wno-format-nonliteral -Wno-cast-qual -Wunreachable-code -Wno-switch-default 
+	-Wreturn-type -Wmultichar -Wformat-security -Wno-ignored-qualifiers -Wno-error=pedantic -Wno-sign-compare -Wno-error=missing-prototypes -Wdouble-promotion -Wclobbered -Wdeprecated 
+	-Wempty-body -Wshift-negative-value -Wstack-usage=2048)
+    target_link_libraries(${EXECUTABLE} SDL2) # Link SDL for the simulator
+else()
+	set(EXECUTABLE		${CMAKE_PROJECT_NAME}-fw)
+	# Linker File     --- MUST EDIT ---
+	set(MCU_LINKER_SCRIPT       ${PROJ_PATH}/STM32F767VITX_FLASH.ld)
 
-# Project symbols
-target_compile_definitions(${EXECUTABLE} PRIVATE ${compiler_define})
+	# MCU Parameters (FPU, HAL, etc.)
+	include(STM32F767xx_HAL_PARA)
 
-# Compiler options
-set(WARNINGS
-    all
-	extra
-	maybe-uninitialized
-	strict-overflow=2
-	switch
-	write-strings
-)
+	add_executable(${EXECUTABLE} ${FIRMWARE_SOURCES})
+	target_include_directories(${EXECUTABLE} PRIVATE ${INCLUDE_DIRS_FIRMWARE})
 
-list(TRANSFORM WARNINGS PREPEND "-W")
-list(TRANSFORM DISABLE_WARNINGS PREPEND "-Wno-")
+	# Project symbols
+	target_compile_definitions(${EXECUTABLE} PRIVATE ${compiler_define})
 
-target_compile_options(${EXECUTABLE} PRIVATE
-	${CPU_PARAMETERS}
-)
+	# Compiler options
+	set(WARNINGS
+		all
+		extra
+		maybe-uninitialized
+		strict-overflow=2
+		switch
+		write-strings
+	)
 
-# Linker options
-target_link_options(${EXECUTABLE} PRIVATE
-	-T${MCU_LINKER_SCRIPT}
-	${CPU_PARAMETERS}
-	-Wl,-Map=${CMAKE_PROJECT_NAME}.map
-	--specs=nosys.specs
-	#-u _printf_float                # STDIO float formatting support
-	-Wl,--start-group
-	-lc
-	-lm
-	-lstdc++
-	-lsupc++
-	-Wl,--end-group
-	-Wl,--print-memory-usage
-)
+	list(TRANSFORM WARNINGS PREPEND "-W")
+	list(TRANSFORM DISABLE_WARNINGS PREPEND "-Wno-")
 
-# Execute post-build to print size
-add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
-	COMMAND ${CMAKE_SIZE} $<TARGET_FILE:${EXECUTABLE}>
-)
+	target_compile_options(${EXECUTABLE} PRIVATE
+		${CPU_PARAMETERS}
+	)
 
-# Convert output to hex and binary
-add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
-	COMMAND ${CMAKE_OBJCOPY} -O ihex $<TARGET_FILE:${EXECUTABLE}> ${EXECUTABLE}.hex
-)
+	# Linker options
+	target_link_options(${EXECUTABLE} PRIVATE
+		-T${MCU_LINKER_SCRIPT}
+		${CPU_PARAMETERS}
+		-Wl,-Map=${CMAKE_PROJECT_NAME}.map
+		--specs=nosys.specs
+		#-u _printf_float                # STDIO float formatting support
+		-Wl,--start-group
+		-lc
+		-lm
+		-lstdc++
+		-lsupc++
+		-Wl,--end-group
+		-Wl,--print-memory-usage
+	)
 
-# Convert to bin file -> add conditional check?
-add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
-	COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:${EXECUTABLE}> ${EXECUTABLE}.bin
-)
+	# Execute post-build to print size
+	add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
+		COMMAND ${CMAKE_SIZE} $<TARGET_FILE:${EXECUTABLE}>
+	)
+
+	# Convert output to hex and binary
+	add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
+		COMMAND ${CMAKE_OBJCOPY} -O ihex $<TARGET_FILE:${EXECUTABLE}> ${EXECUTABLE}.hex
+	)
+
+	# Convert to bin file -> add conditional check?
+	add_custom_command(TARGET ${EXECUTABLE} POST_BUILD
+		COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:${EXECUTABLE}> ${EXECUTABLE}.bin
+	)
+endif()
