--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "device": "STM32F767VITX", // Change to your MCU used
       "interface": "swd",
       "serialNumber": "", // Set ST-Link ID if you use multiple at the same time
-      "runToEntryPoint": "main",
+      // "runToEntryPoint": "main",
       "svdFile": "${env:STM32CLT_PATH}/STMicroelectronics_CMSIS_SVD/STM32F767.svd", // Change based your MCU used
       "v1": false, // Change it depending on ST Link version
       "serverpath": "${env:STM32CLT_PATH}/STLink-gdb-server/bin/ST-LINK_gdbserver",
@@ -37,7 +37,7 @@
       "device": "STM32F767VITX", // Change to your MCU used
       "interface": "swd",
       "serialNumber": "", // Set ST-Link ID if you use multiple at the same time
-      "runToEntryPoint": "main",
+      // "runToEntryPoint": "main",
       "svdFile": "${env:STM32CLT_PATH}/STMicroelectronics_CMSIS_SVD/STM32F767.svd", // Change based your MCU used
       "v1": false, // Change it depending on ST Link version
       "serverpath": "${env:STM32CLT_PATH}/STLink-gdb-server/bin/ST-LINK_gdbserver",
