--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "hal_lvgl_encoder.h": "c",
         "stdbool.h": "c",
         "iron.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "buzzer.h": "c"
     }
 }
